# ckanext-signposting

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/signposting/: plugin.py
ckanext/signposting/assets/: script.js  webassets.yml
ckanext/signposting/templates/package/: read.html  read_base.html
ckanext/signposting/tests/: test_plugin.py
