[metadata]
name = ckanext-signposting
version = 0.0.1
description = CKAN extension for signposting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/annefou/ckanext-signposting
author = Anne Fouilloux
author_email = annef@simula.no
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             signposting = ckanext.signposting.plugin:SignpostingPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/signposting/i18n/ckanext-signposting.pot
width = 80

[init_catalog]
domain = ckanext-signposting
input_file = ckanext/signposting/i18n/ckanext-signposting.pot
output_dir = ckanext/signposting/i18n

[update_catalog]
domain = ckanext-signposting
input_file = ckanext/signposting/i18n/ckanext-signposting.pot
output_dir = ckanext/signposting/i18n
previous = true

[compile_catalog]
domain = ckanext-signposting
directory = ckanext/signposting/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
